--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# swishstation-app<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh">
 <head>
   <meta charset="UTF-8" />
@@ -23,26 +23,3 @@
   </script>
 </body>
 </html>
-{
-  "name": "Swish Station",
-  "short_name": "Swish",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
-self.addEventListener('install', () => {
-  self.skipWaiting();
-});
